# my_second_delta

./: README.md  package.xml  qos_overrides.yaml  setup.cfg  setup.py
config/: delta_joint_position.yaml
data/: coordinates.xlsx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/delta_moveit_config/share/delta_moveit_config/: .setup_assistant  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/more_interfaces/share/more_interfaces/: package.sh
install/my_first_delta/lib/my_first_delta/: get_user_input  inverse_kinematics_server  joint_publisher
install/my_first_delta/share/my_first_delta/: package.bash  package.ps1  package.sh  package.zsh
install/my_second_delta/lib/my_second_delta/: inverse_kinematics_client  inverse_kinematics_server  joint_publisher  plc_reader  spawner
launch/: launch_delta.py  launch_tictactoe.py
log/: latest_build
meshes/: Base_Movil.stl  Brazo.stl  tictactoe_Board.stl
my_second_delta/: excel_firebase_uploader.py  excel_publisher.py  joint_publisher.py  plc_reader.py  plc_reader_writer.py  teleop_keyboard.py  tictactoe_player.py
rosbag2_2024_05_26-16_18_09/: metadata.yaml  rosbag2_2024_05_26-16_18_09_0.mcap
src/delta_moveit_config/: CMakeLists.txt
src/delta_moveit_config/config/: delta.urdf.xacro  kinematics.yaml
src/delta_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/more_interfaces/: CMakeLists.txt
src/my_first_delta/: package.xml  setup.cfg  setup.py
src/my_first_delta/launch/: basic_launch.py
src/my_first_delta/my_first_delta/: inverse_kinematics_server.py  joint_publisher.py
src/my_third_delta/: setup.cfg  setup.py
src/my_third_delta/launch/: launch_delta.py
src/my_third_delta/urdf/: delta.urdf  delta.urdf.xacro
urdf/: arc_delta_onTable.sdf  delta.sdf  delta.urdf  delta.urdf.xacro  game_board.urdf  gazebo_stuff.xacro  macros.xacro
worlds/: delta_world.world
(+55 files in other folders)
