<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_second_delta</name>
  <version>0.0.0</version>
  <description>Second attempt at simulating a delta robot</description>
  <maintainer email="s.penunuri@hotmail.com">sanmaster</maintainer>
  <license>Apache-2.0</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>snap7</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>gazebo_ros2_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
